--- a/Model_Comparison/kaggle_comparison.ipynb
+++ b/Model_Comparison/kaggle_comparison.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:30.264964Z",
-     "start_time": "2021-06-30T18:56:27.882617Z"
+     "end_time": "2021-07-22T18:23:08.951233Z",
+     "start_time": "2021-07-22T18:23:07.618021Z"
     }
    },
    "outputs": [],
@@ -27,11 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:30.365208Z",
-     "start_time": "2021-06-30T18:56:30.268992Z"
+     "end_time": "2021-07-23T01:08:25.067656Z",
+     "start_time": "2021-07-23T01:08:24.979433Z"
     }
    },
    "outputs": [],
@@ -42,11 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:30.381106Z",
-     "start_time": "2021-06-30T18:56:30.369109Z"
+     "end_time": "2021-07-23T01:08:25.301029Z",
+     "start_time": "2021-07-23T01:08:25.234153Z"
     }
    },
    "outputs": [],
@@ -61,11 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:30.396145Z",
-     "start_time": "2021-06-30T18:56:30.386111Z"
+     "end_time": "2021-07-23T01:08:25.860886Z",
+     "start_time": "2021-07-23T01:08:25.835386Z"
     }
    },
    "outputs": [],
@@ -77,11 +77,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:30.428199Z",
-     "start_time": "2021-06-30T18:56:30.400110Z"
+     "end_time": "2021-07-23T01:08:29.286450Z",
+     "start_time": "2021-07-23T01:08:29.256566Z"
     }
    },
    "outputs": [],
@@ -100,11 +100,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:30.490145Z",
-     "start_time": "2021-06-30T18:56:30.431111Z"
+     "end_time": "2021-07-23T01:08:31.527478Z",
+     "start_time": "2021-07-23T01:08:31.497549Z"
     }
    },
    "outputs": [],
@@ -115,11 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:30.506145Z",
-     "start_time": "2021-06-30T18:56:30.493110Z"
+     "end_time": "2021-07-22T18:23:10.792223Z",
+     "start_time": "2021-07-22T18:23:10.767191Z"
     }
    },
    "outputs": [],
@@ -133,11 +133,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:30.522147Z",
-     "start_time": "2021-06-30T18:56:30.510108Z"
+     "end_time": "2021-07-22T18:23:11.027197Z",
+     "start_time": "2021-07-22T18:23:11.009196Z"
     }
    },
    "outputs": [],
@@ -151,11 +151,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:30.583147Z",
-     "start_time": "2021-06-30T18:56:30.526110Z"
+     "end_time": "2021-07-22T18:23:11.336439Z",
+     "start_time": "2021-07-22T18:23:11.285427Z"
     }
    },
    "outputs": [
@@ -199,11 +199,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:30.677109Z",
-     "start_time": "2021-06-30T18:56:30.586110Z"
+     "end_time": "2021-07-22T18:23:12.498670Z",
+     "start_time": "2021-07-22T18:23:12.102747Z"
     }
    },
    "outputs": [],
@@ -213,11 +213,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:31.239976Z",
-     "start_time": "2021-06-30T18:56:30.681111Z"
+     "end_time": "2021-07-22T18:23:12.985151Z",
+     "start_time": "2021-07-22T18:23:12.498670Z"
     }
    },
    "outputs": [],
@@ -231,11 +231,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:31.301066Z",
-     "start_time": "2021-06-30T18:56:31.247984Z"
+     "end_time": "2021-07-22T18:23:13.048163Z",
+     "start_time": "2021-07-22T18:23:12.989150Z"
     }
    },
    "outputs": [],
@@ -249,11 +249,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:31.331620Z",
-     "start_time": "2021-06-30T18:56:31.304975Z"
+     "end_time": "2021-07-22T18:23:13.079157Z",
+     "start_time": "2021-07-22T18:23:13.052154Z"
     }
    },
    "outputs": [
@@ -262,12 +262,12 @@
      "output_type": "stream",
      "text": [
       "Sklearn Random Forest\n",
-      "R^2: 0.8276385663355892\n",
-      "Adjusted R^2: 0.8114016196860432\n",
-      "MAE: 2.511690789473683\n",
-      "MSE: 17.997993361842095\n",
-      "RMSE: 4.242404195953291\n",
-      "MAPE 12.035856442972952\n"
+      "R^2: 0.8246054984193196\n",
+      "Adjusted R^2: 0.8080828279805599\n",
+      "MAE: 2.5032697368421055\n",
+      "MSE: 18.31470653289474\n",
+      "RMSE: 4.2795684984463955\n",
+      "MAPE 11.837845406377234\n"
      ]
     }
    ],
@@ -292,11 +292,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:31.379619Z",
-     "start_time": "2021-06-30T18:56:31.334586Z"
+     "end_time": "2021-07-22T18:23:14.008524Z",
+     "start_time": "2021-07-22T18:23:13.810609Z"
     }
    },
    "outputs": [],
@@ -307,11 +307,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:31.752899Z",
-     "start_time": "2021-06-30T18:56:31.382582Z"
+     "end_time": "2021-07-22T18:23:15.011750Z",
+     "start_time": "2021-07-22T18:23:14.096762Z"
     }
    },
    "outputs": [],
@@ -325,11 +325,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:31.782936Z",
-     "start_time": "2021-06-30T18:56:31.756942Z"
+     "end_time": "2021-07-22T18:23:15.036376Z",
+     "start_time": "2021-07-22T18:23:15.011750Z"
     }
    },
    "outputs": [],
@@ -343,11 +343,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:31.814157Z",
-     "start_time": "2021-06-30T18:56:31.787900Z"
+     "end_time": "2021-07-22T18:23:15.546801Z",
+     "start_time": "2021-07-22T18:23:15.513488Z"
     }
    },
    "outputs": [
@@ -386,11 +386,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:31.921141Z",
-     "start_time": "2021-06-30T18:56:31.914156Z"
+     "end_time": "2021-07-22T18:23:16.680808Z",
+     "start_time": "2021-07-22T18:23:16.672799Z"
     }
    },
    "outputs": [],
@@ -403,11 +403,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:32.123161Z",
-     "start_time": "2021-06-30T18:56:32.100121Z"
+     "end_time": "2021-07-22T18:23:17.065209Z",
+     "start_time": "2021-07-22T18:23:17.041245Z"
     }
    },
    "outputs": [],
@@ -419,11 +419,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:32.604394Z",
-     "start_time": "2021-06-30T18:56:32.582390Z"
+     "end_time": "2021-07-22T18:23:17.425205Z",
+     "start_time": "2021-07-22T18:23:17.393206Z"
     }
    },
    "outputs": [],
@@ -436,11 +436,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:32.852018Z",
-     "start_time": "2021-06-30T18:56:32.837024Z"
+     "end_time": "2021-07-22T18:23:17.849238Z",
+     "start_time": "2021-07-22T18:23:17.817204Z"
     }
    },
    "outputs": [],
@@ -453,11 +453,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:33.115987Z",
-     "start_time": "2021-06-30T18:56:33.093995Z"
+     "end_time": "2021-07-22T18:23:18.152215Z",
+     "start_time": "2021-07-22T18:23:18.128174Z"
     }
    },
    "outputs": [
@@ -491,33 +491,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SVR MAPE Extendido"
+    "### SVR MAPE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:35.825300Z",
-     "start_time": "2021-06-30T18:56:34.010974Z"
+     "end_time": "2021-07-22T18:24:05.234201Z",
+     "start_time": "2021-07-22T18:24:03.649632Z"
     }
    },
    "outputs": [],
    "source": [
     "# Creating scaled set to be used in model to improve our results\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "# Import SVR extended\n",
-    "%run ..//Library//SVR_MAPE_Library.ipynb"
+    "# Import SVR Mape\n",
+    "%run ..//Library//SVRmape_Library.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:35.841264Z",
-     "start_time": "2021-06-30T18:56:35.828262Z"
+     "end_time": "2021-07-22T18:24:05.971216Z",
+     "start_time": "2021-07-22T18:24:05.955178Z"
     }
    },
    "outputs": [],
@@ -529,11 +529,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:36.278269Z",
-     "start_time": "2021-06-30T18:56:35.847262Z"
+     "end_time": "2021-07-22T18:24:07.221028Z",
+     "start_time": "2021-07-22T18:24:06.740273Z"
     }
    },
    "outputs": [],
@@ -541,9 +541,9 @@
     "# Create a SVM Regressor\n",
     "model = SVR_mape(\n",
     "    kernel = \"rbf\", \n",
-    "    C = 6.412259, \n",
-    "    epsilon = 6.608572, \n",
-    "    gamma = 0.053517\n",
+    "    C = 15.631280, \n",
+    "    epsilon = 5.804601, \n",
+    "    gamma = 0.032920\n",
     ")\n",
     "# Train the model using the training sets \n",
     "model.fit(X_train,y_train);"
@@ -551,11 +551,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:36.309385Z",
-     "start_time": "2021-06-30T18:56:36.281263Z"
+     "end_time": "2021-07-22T18:24:07.859182Z",
+     "start_time": "2021-07-22T18:24:07.835138Z"
     }
    },
    "outputs": [],
@@ -568,11 +568,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T18:56:36.465039Z",
-     "start_time": "2021-06-30T18:56:36.445040Z"
+     "end_time": "2021-07-22T18:24:09.419180Z",
+     "start_time": "2021-07-22T18:24:09.387138Z"
     }
    },
    "outputs": [
@@ -580,20 +587,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVR MAPE extendido\n",
-      "R^2: 0.8570057670078214\n",
-      "Adjusted R^2: 0.8435352957839205\n",
-      "MAE: 2.2837693092065523\n",
-      "MSE: 14.931468144931845\n",
-      "RMSE: 3.8641257931040296\n",
-      "MAPE 10.454780084751189\n"
+      "SVR MAPE\n",
+      "R^2: 0.8602501560371553\n",
+      "Adjusted R^2: 0.8470853156638438\n",
+      "MAE: 2.2054266298053777\n",
+      "MSE: 14.592688807978343\n",
+      "RMSE: 3.820037801904366\n",
+      "MAPE 10.286618730776878\n"
      ]
     }
    ],
    "source": [
     "# Model Evaluation\n",
     "acc_svm = metrics.r2_score(y_test, y_test_pred)\n",
-    "print('SVR MAPE extendido')\n",
+    "print('SVR MAPE')\n",
     "print('R^2:', acc_svm)\n",
     "print('Adjusted R^2:',1 - (1-metrics.r2_score(y_test, y_test_pred))*(len(y_test)-1)/(len(y_test)-X_test.shape[1]-1))\n",
     "print('MAE:',metrics.mean_absolute_error(y_test, y_test_pred))\n",
